platform/gatekeeper/constraints/denyNodePort.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sBlockNodePort
metadata:
  name: eca-nodeport 
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Service"]
